Pagina contacto terminada

--- a/contacto.html
+++ b/contacto.html
@@ -28,6 +28,145 @@
         </div>
     </nav>
 
+    <header class="header-mio color-primario-mio text-white text-center py-5 ">
+        <div class="container">
+            <h1>Formas de contactar con nosotros</h1>
+        </div>
+    </header>
+
+    <section id="contacto-page" class="bg-light py-5 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="media/telefono.jpg" class="img-fluid rounded-start" alt="Telefono">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Telefono</h5>
+                                    <p class="card-text">Puedes contactar con nosotros a traves de nuestro telefono 955815852
+                                        <br>De Lunes a Viernes
+                                        <br>de 9:00 a 13:30 y de 16:00 a 21:30
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3179.58906659375!2d-5.932019024337223!3d37.16246957214604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1277c576045545%3A0x8db0e747256389cc!2sGimnasio%20Juan%20S%C3%A1nchez!5e0!3m2!1ses!2ses!4v1741447453668!5m2!1ses!2ses" 
+                                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nuestro local</h5>
+                                    <p class="card-text">Puedes personarte en el local y hablar con algun monitor para mas informacion, en horario
+                                        <br>De Lunes a Viernes
+                                        <br>de 9:00 a 13:30 y de 16:00 a 21:30
+                                        <br>Calle San Sebastián, 3, 41720 Los Palacios y Villafranca, Sevilla
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="media/mail.jpg" class="img-fluid rounded-start" alt="Mail">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Correo electronico</h5>
+                                    <p class="card-text">Puedes escribir un correo electronico a la siguiente direccion de correo
+                                    <br><a href="mailto:gimnasiogrecia@gmail.com">gimnasiogrecia@gmail.com</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="media/formulario.jpg" class="img-fluid rounded-start" alt="Formulario">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Formulario</h5>
+                                    <p class="card-text">Puedes rellenar el siguiente formulario y nos pondremos en contacto lo antes posible</p>
+                                    <a class="btn btn-amarillo-mio" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                                        Hacer formulario
+                                    </a>
+                                    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                                        <div class="offcanvas-header">
+                                            <h5 class="offcanvas-title" id="offcanvasExampleLabel">Formulario de contacto</h5>
+                                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                        </div>
+                                        <div class="offcanvas-body">
+                                            <form>
+                                                <div class="row mb-3">
+                                                    <label for="inputEmail" class="form-label">Correo electronico</label>
+                                                    <div class="col-sm-10">
+                                                        <input type="email" class="form-control" name="inputEmail" id="inputEmail" placeholder="Correo electronico...">
+                                                    </div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <label for="inputPregunta" class="form-label">Descripcion</label>
+                                                    <div class="col-sm-10">
+                                                        <textarea name="inputPregunta" class="form-control" id="inputPregunta" placeholder="Describa su problema..."></textarea>
+                                                    </div>
+                                                </div>
+                                                <fieldset class="row mb-3">
+                                                    <label class="form-label" for="clasificacion">Clasificacion de pregunta</label>
+                                                    <div class="col-sm-10">
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="radio" name="clasificacion" id="nutricion" value="nutricion" checked>
+                                                            <label class="form-check-label" for="nutricion">
+                                                                Nutricion
+                                                            </label>
+                                                        </div>
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="radio" name="clasificacion" id="instalaciones" value="instalaciones">
+                                                            <label class="form-check-label" for="instalaciones">
+                                                                Instalaciones
+                                                            </label>
+                                                        </div>
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="radio" name="clasificacion" id="entrenamiento" value="entrenamiento">
+                                                            <label class="form-check-label" for="entrenamiento">
+                                                                Entrenamiento personalizado
+                                                            </label>
+                                                        </div>
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="radio" name="clasificacion" id="entrenamientoGrupal" value="entrenamientoGrupal">
+                                                            <label class="form-check-label" for="entrenamientoGrupal">
+                                                                Entrenamientos grupales
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                </fieldset>
+                                                <button type="submit" class="btn btn-amarillo-mio">Enviar formulario</button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <footer class="color-footer-mio text-white text-center py-3">
         <p>&copy; 2025 Gimnasio Grecia. Todos los derechos reservados.</p>
         <p> Calle San Sebastián, 3, 41720 Los Palacios y Villafranca, Sevilla</p>
