--- a/nosotros.html
+++ b/nosotros.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <img class="fotos-card" src="media/hombre-fuerte.jpg" alt="Steve Reeves">
                             <h4 class="card-title">¿Por que Gimnasio Grecia?</h4>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <img class="fotos-card" src="media/favicon.jpg" alt="Logo">
                             <h4 class="card-title">¿Donde nos encontramos?</h4>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <img class="fotos-card" src="media/horario.jpg" alt="Steve Reeves">
                             <h4 class="card-title">¿Cuando abrimos?</h4>
