--- a/servicios.html
+++ b/servicios.html
@@ -100,8 +100,7 @@
 
     <section>
         <div class="bg-light py-5 text-center">
-            <h4>Si desea obtener mas informacion, llame al 955 81 58 52 o rellena el formulario y nos pondremos en contacto rapidamente.</h4>
-            <a href="./contacto.html" class="btn btn-amarillo-mio">Contacta con nosotros</a>
+            <a href="./contacto.html" class="btn btn-amarillo-mio">¿Desea obtener mas informacion?</a>
         </div>
     </section>
 
