--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <header class="header-mio color-primario-mio text-white text-center py-5 ">
+    <header class="header-mio color-primario-mio text-white text-center py-4 ">
         <div class="container">
             <h1>Formas de contactar con nosotros</h1>
         </div>
@@ -85,7 +85,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Correo electronico</h5>
                                     <p class="card-text">Puedes escribir un correo electronico a la siguiente direccion de correo
-                                    <br><a href="mailto:gimnasiogrecia@gmail.com">gimnasiogrecia@gmail.com</a>
+                                    <br><a href="mailto:gimnasiogrecia@gmail.com" class="btn btn-amarillo-mio">gimnasiogrecia@gmail.com</a>
                                     </p>
                                 </div>
                             </div>
@@ -162,6 +162,28 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="media/instagram.png" class="img-fluid rounded-start" alt="instagram">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Instagram</h5>
+                                    <p class="card-text">Puedes escribir a nuestro instagram por mensaje directo y nos pondremos en contacto lo antes posible
+                                        <br>
+                                        <a href="https://www.instagram.com/gymgrecia/" target="_blank" class="btn btn-amarillo-mio mt-3">
+                                            Instagram
+                                        </a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3"></div>
             </div>
         </div>
     </section>
