--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <header class="header-mio color-primario-mio text-white text-center py-5 ">
+    <header class="header-mio color-primario-mio text-white text-center py-4 ">
         <div class="container">
             <h1>Bienvenido a Gimnasio Grecia</h1>
             <p>Buenos habitos, buena vida</p>
@@ -65,7 +65,7 @@
 
     <section id="servicios" class="bg-light py-5 text-center">
         <div class="container">
-            <h2 class="margen-inferior-h">Nuestros Servicios</h2>
+            <h2 class="mb-3">Nuestros Servicios</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
@@ -118,7 +118,7 @@
     </section>
 
     <section class="container my-5">
-        <h2 class="text-center margen-inferior-h">Preguntas que pueden servir de ayuda</h2>
+        <h2 class="text-center mb-3">Preguntas que pueden servir de ayuda</h2>
         <div class="accordion" id="acordeonPreguntas">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
