--- a/juanSanchez.html
+++ b/juanSanchez.html
@@ -28,6 +28,32 @@
         </div>
     </nav>
 
+    <header class="header-mio color-primario-mio text-white text-center py-4 ">
+        <div class="container">
+            <h1>JUAN SANCHEZ</h1>
+        </div>
+    </header>
+
+    <section class="bg-light py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="media/juan-sanchez.jpg" class="img-fluid imagen-mio-carrusel" alt="Juan Sanchez"/>
+                </div>
+                <div class="col-md-6 mt-3">
+                    <h3>Juan Sanchez, ejemplo a seguir  <span class="badge btn-amarillo-mio">IMPORTANTE</span></h3>
+                    <p class="fs-4">La gente de nuestro gym conocen bien esta foto: Juan Sánchez en el III Campeonato 
+                        de España de Fisioculturismo Natural, celebrado en Miranda de Ebro. Año 1999. 
+                        Juan se alzó con el título de campeón de España en la categoría senior pesado +80Kg.
+                        <br>Para el templo, que es como llaman al gimnasio sus socios mas antiguos, Juan Sanchez es todo un ejemplo a seguir.
+                        Para muchos es un símbolo de que con dedicación y pasión, cualquier meta es posible.
+                        <br>Claramente no podia faltar una parte de la pagina en dedicatoria a el.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="color-footer-mio text-white text-center py-3">
         <p>&copy; 2025 Gimnasio Grecia. Todos los derechos reservados.</p>
         <p> Calle San Sebastián, 3, 41720 Los Palacios y Villafranca, Sevilla</p>
