--- a/servicios.html
+++ b/servicios.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <header class="header-mio color-primario-mio text-white text-center py-5 ">
+    <header class="header-mio color-primario-mio text-white text-center py-4 ">
         <div class="container">
             <h1>¿Que ofrecemos?</h1>
         </div>
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="card">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <img class="fotos-card" src="media/dieta.png" alt="Dietas">
                             <h4 class="card-title">Plan de dietas</h4>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <img class="fotos-card" src="media/pilates.jpg" alt="Logo">
                             <h4 class="card-title">Clases de pilates</h4>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <img class="fotos-card" src="media/karate.jpg" alt="Karate">
                             <h4 class="card-title">Clases de karate</h4>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <img class="fotos-card" src="media/programa-fpr.jpg" alt="Programa FPR">
                             <h4 class="card-title">Entrenamiento personal adaptado</h4>
